dodate GeoSrbija WMS KN podloge i stilovi za geodetske slojeve

--- a/naissus-gis.ini
+++ b/naissus-gis.ini
@@ -38,6 +38,7 @@ mar="0.5"
 pTx="1"
 pTy="1"
 hTab="1.7"
+hTab2="3.4"
 [PRINT2]
 papir="A3"
 hPap=29.7
@@ -46,6 +47,7 @@ mar="0.8"
 pTx="1"
 pTy="1"
 hTab="2"
+hTab2="4"
 [PRINT3]
 papir="A2"
 hPap=42
