--- a/naissus-gis.ini
+++ b/naissus-gis.ini
@@ -4,11 +4,11 @@ IME="naissus-gis.MBX"
 VER=""
 OS=""
 [UPDATE_FOLDERI]
-PRJ=""
-MBX=""
-WOR=""
+PRJ="\\verdi\GIS\[update]\PRJ\"
+MBX="\\verdi\GIS\[update]\MBX\"
+WOR="\\verdi\GIS\[update]\WOR\"
 [MSSQL_GIS_SERVER]
-DSN=""
+DSN="naissus-gis"
 KOR=""
 IME=""
 SEKTOR=""
@@ -16,10 +16,10 @@ SLUZBA=""
 ODELJENJE=""
 CRS=""
 [GIS_FOLDERI]
-Folder_WOR=""
-Folder_RAD=""
-Folder_PRN=""
-Folder_TAB=""
+Folder_WOR="D:\GIS\"
+Folder_RAD="D:\GIS\_radni"
+Folder_PRN="D:\GIS\Print"
+Folder_TAB="D:\GIS\SQL\"
 Folder_POD=""
 Folder_NET=""
 Folder_CCTV=""
@@ -28,7 +28,7 @@ Folder_WWW=""
 nPrinter="3"
 nPrint=5
 LEGENDA="1"
-NASLOV="Situacioni Plan"
+NASLOV="Situacioni Plan 1"
 DPI="200"
 [PRINT1]
 papir="A4"
