--- a/naissus-gis.ini
+++ b/naissus-gis.ini
@@ -4,9 +4,9 @@ IME="naissus-gis.MBX"
 VER=""
 OS=""
 [UPDATE_FOLDERI]
-PRJ="\\verdi\GIS\[update]\PRJ\"
-MBX="\\verdi\GIS\[update]\MBX\"
-WOR="\\verdi\GIS\[update]\WOR\"
+PRJ=""
+MBX=""
+WOR=""
 [MSSQL_GIS_SERVER]
 DSN="naissus-gis"
 KOR=""
@@ -16,10 +16,10 @@ SLUZBA=""
 ODELJENJE=""
 CRS=""
 [GIS_FOLDERI]
-Folder_WOR="D:\GIS\"
-Folder_RAD="D:\GIS\_radni"
-Folder_PRN="D:\GIS\Print"
-Folder_TAB="D:\GIS\SQL\"
+Folder_WOR=""
+Folder_RAD=""
+Folder_PRN=""
+Folder_TAB=""
 Folder_POD=""
 Folder_NET=""
 Folder_CCTV=""
