dijalog Registar Ulica dodat

--- a/naissus-gis.ini
+++ b/naissus-gis.ini
@@ -1,5 +1,5 @@
 [MBX]
-DIR=""
+DIR="D:\git\NAISSUS_GIS_SQL\"
 IME="naissus-gis.MBX"
 VER=""
 OS=""
@@ -9,17 +9,17 @@ MBX=""
 WOR=""
 [MSSQL_GIS_SERVER]
 DSN="naissus-gis"
-KOR=""
+KOR="nebojsa"
 IME=""
 SEKTOR=""
 SLUZBA=""
 ODELJENJE=""
 CRS=""
 [GIS_FOLDERI]
-Folder_WOR=""
-Folder_RAD=""
-Folder_PRN=""
-Folder_TAB=""
+Folder_WOR="D:\GIS\"
+Folder_RAD="D:\GIS\_radni\"
+Folder_PRN="D:\GIS\Print\"
+Folder_TAB="D:\GIS\SQL\"
 Folder_POD=""
 Folder_NET=""
 Folder_CCTV=""
